# vidore-benchmark

./: .env.dist  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  REPRODUCIBILITY.md  evaluate_fix.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  run_from_lib.sh  update_ds_fix.py
.github/workflows/: publish.yml  test.yml
experiments/: .gitignore
experiments/2024-08-06_impact_of_pool_factor_on_retrieval/: README.md  main.py  plot_token_pooling_chart.ipynb  plot_token_pooling_ocr.ipynb  plot_token_pooling_results.ipynb  run.sh
experiments/2024-08-06_impact_of_pool_factor_on_retrieval/notebooks/: plot_patches_per_cluster.ipynb  plot_token_pooling_results.ipynb
experiments/2024-08-06_impact_of_pool_factor_on_retrieval/outputs/arxivqa/: arxivqa_test_subsampled_scoring_latencies.json
experiments/2024-08-06_impact_of_pool_factor_on_retrieval/outputs/docvqa/: docvqa_test_subsampled_scoring_latencies.json  vidore_colpali_scoring_latencies.json
experiments/2024-08-06_impact_of_pool_factor_on_retrieval/outputs/energy/: vidore_colpali_scoring_latencies.json
experiments/2024-08-06_impact_of_pool_factor_on_retrieval/outputs/infovqa/: infovqa_test_subsampled_scoring_latencies.json
experiments/2024-08-06_impact_of_pool_factor_on_retrieval/outputs/shift_project/: vidore_colpali_scoring_latencies.json
experiments/2024-08-06_impact_of_pool_factor_on_retrieval/outputs/shiftproject/: shiftproject_test_scoring_latencies.json
experiments/2024-08-06_impact_of_pool_factor_on_retrieval/outputs/syntheticDocQA_energy/: syntheticDocQA_energy_test_scoring_latencies.json
experiments/2024-08-06_impact_of_pool_factor_on_retrieval/outputs/tabfquad/: tabfquad_test_subsampled_scoring_latencies.json
leaderboard/: app.py
scripts/: evaluate.py  evaluate_retriever.py  generate_similarity_maps.py  inference.py  retrieve_on_dataset.py  retrieve_on_pdfs.py  retriever_on_pdfs.py  simple_example.py
scripts/examples/: colpali_example.py
skypilot/default/: config.yaml
skypilot/l4/: config.yaml
src/: run_from_src.sh
src/outputs/: blip_Salesforce_blip-itm-base-flickr_metrics.json  test_retriever_metrics.json
src/scripts/: evaluate.py  inference.py
src/vidore_benchmark/: __init__.py  generate_similarity_maps.py  main.py
src/vidore_benchmark/cli/: convert_ds_from_qa_to_beir.py  convert_ds_to_beir.py  main.py
src/vidore_benchmark/cli/examples/: convert_vidore_benchmark_to_beir.sh
src/vidore_benchmark/compression/: quantization.py  token_pooling.py
src/vidore_benchmark/compression/quantization/: __init__.py  base_embedding_quantizer.py  embedding_binarizer.py  embedding_int8_quantizer.py
src/vidore_benchmark/dataset/: vision_collator.py
src/vidore_benchmark/evaluation/: __init__.py  colbert_score.py  colpali_scorer.py  eval_manager.py  eval_utils.py  evaluate.py  evaluation.py  interfaces.py  retrieval_evaluator.py  scoring.py  vidore_evaluator.py
src/vidore_benchmark/evaluation/vidore_evaluator/: vidore_evaluator_base.py  vidore_evaluator_beir.py  vidore_evaluator_qa.py
src/vidore_benchmark/evaluation/vidore_evaluators/: __init__.py  base_vidore_evaluator.py  contextual_evaluator_beir.py  img_contextual_evaluator_beir.py  vidore_evaluator_base.py  (+2 more)
src/vidore_benchmark/interpretability/: __init__.py  colpali_processor.py  gen_interpretability_plots.py  gen_similarity_maps.py  plot_utils.py  processor.py  torch_utils.py  vit_configs.py
src/vidore_benchmark/models/: __init__.py  bge_m3.py  bgem3.py  bipali.py  bipali_model.py  colpali.py  colpali_model.py  jina_clip.py  nomic.py  siglip.py  siglip_model.py  vision_retriever.py
src/vidore_benchmark/ocr/: __init__.py  interfaces.py  tesseract_utils.py
src/vidore_benchmark/retrievers/: README.md  __init__.py  base_vision_retriever.py  bge_m3.py  bge_m3_colbert_retriever.py  bge_m3_retriever.py  biqwen2_retriever.py  biqwen_retriever.py  bisiglip_retriever.py  blip_retriever.py  bm25_retriever.py  cohere_api_retriever.py  colidefics3_retriever.py  colpali_retriever.py  colpali_with_pooling_retriever.py  colqwen25_retriever.py  colqwen2_5_retriever.py  colqwen2_retriever.py  colqwen_retriever.py  colqwenomni_retriever.py  contextual_vision_retriever.py  dse_qwen2_retriever.py  dse_retriever.py  dummy.py  dummy_retriever.py  dummy_vision_retriever.py  hf_api_retriever.py  img_contextual_vision_retriever.py  jina_clip.py  jina_clip_retriever.py  jina_v3_retriever.py  jina_v4_retriever.py  llava_onevision_retriever.py  nomic.py  nomic_retriever.py  registry_utils.py  siglip.py  siglip_retriever.py  test_retriever.py  vision_retriever.py
src/vidore_benchmark/tesseract/: __init__.py  interfaces.py  ocr_utils.py
src/vidore_benchmark/utils/: __init__.py  constants.py  data_utils.py  dataset_transformation.py  image_utils.py  intialize_retrievers.py  log_utils.py  logging_utils.py  pdf_utils.py  plot_utils.py  registration.py  testing_utils.py  torch_utils.py  train_custom_colbert_models.py  wrapper.py
tests/cli/: test_e2e_evaluate_retriever.py  test_evaluate_retriever.py
tests/compression/: test_quantization.py  test_token_pooling.py
tests/compression/quantization/: test_embedding_binarizer.py  test_embedding_int8_quantizer.py
tests/data/e2e_vidore_results/: bm25_tabfquad.json  colsmol_256M_tabfquad.json  siglip_tabfquad_beir.json  siglip_tabfquad_qa.json
tests/evaluation/: test_eval_manager.py  test_evaluate.py  test_inferfaces.py
tests/evaluation/vidore_evaluators/: conftest.py  test_vidore_evaluator_beir.py  test_vidore_evaluator_qa.py
tests/retrievers/: conftest.py  test_bge_m3_colbert_retriever.py  test_bge_m3_retriever.py  test_biqwen2_retriever.py  test_bm25_retriever.py  test_cohere_api_retriever.py  test_colidefics3_retriever.py  test_colpali_retriever.py  test_colqwen2_5_retriever.py  test_colqwen2_retriever.py  test_dse_qwen2_retriever.py  test_dse_retriever.py  test_dummy_retriever.py  test_dummy_vision_retriever.py  test_jina_clip_retriever.py  test_nomic_retriever.py  test_siglip_retriever.py  test_vision_retriever.py
tests/utils/: test_data_utils.py
(+84 files in other folders)
