[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/vidore_benchmark"]

[project]
name = "vidore_benchmark"
dynamic = ["version"]
description = "Vision Document Retrieval (ViDoRe): Benchmark. Evaluation code for the ColPali paper."
authors = [
    { name = "Tony Wu", email = "tony.wu@illuin.tech" },
    { name = "Manuel Faysse", email = "manuel.faysse@illuin.tech" },
    { name = "Hugues Sibille", email = "hugues.sibille@illuin.tech" },
]
maintainers = [{ name = "Tony Wu", email = "tony.wu@illuin.tech" }]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "datasets>=2.15.0,<3.0.0",
    "colpali-engine>=0.3.0,<0.4.0",
    "einops>=0.8.0,<1.0.0",
    "GPUtil>=1.4.0,<2.0.0",
    "loguru>=0.7.0,<1.0.0",
    "mteb>=1.12.47,<2.0.0",
    "numpy>=1.21.2,<2.0.0",
    "pdf2image>=1.17.0,<2.0.0",
    "peft>=0.11.1,<0.13.0",
    "pillow>=9.2.0,<11.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "sentencepiece>=0.2.0,<1.0.0",
    "sentence-transformers>=3.0.1,<4.0.0",
    "torch>=2.0.0,<3.0.0",
    "transformers>=4.41.1,<5.0.0",
    "typer>=0.12.3,<1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.1", "ruff>=0.4.5"]

bge-m3 = ["FlagEmbedding>=1.2.10,<2.0.0"]
bm25 = ["nltk>=3.8.1,<4.0.0", "rank-bm25>=0.2.2,<1.0.0"]
jina-clip = ["timm>=1.0.7,<2.0.0"]
siglip = ["protobuf>=4.25.3,<5.0.0"]
all-retrievers = [
    "vidore-benchmark[bge-m3]",
    "vidore-benchmark[bm25]",
    "vidore-benchmark[jina-clip]",
    "vidore-benchmark[siglip]",
]

interpretability = ["matplotlib>=3.9.0,<4.0.0", "seaborn>=0.13.2,<1.0.0"]

all = [
    "vidore-benchmark[all-retrievers]",
    "vidore-benchmark[dev]",
    "vidore-benchmark[interpretability]",
]

skypilot = ["skypilot==0.6.1,<1.0.0"]

[project.urls]
homepage = "https://github.com/illuin-tech/vidore-benchmark"

[project.scripts]
vidore-benchmark = "vidore_benchmark.main:app"
generate-similarity-maps = "vidore_benchmark.generate_similarity_maps:app"

[tool.pytest.ini_options]
filterwarnings = ["ignore::Warning"]
markers = ["slow: marks test as slow"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
