[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/vidore_benchmark"]

[project]
name = "vidore_benchmark"
dynamic = ["version"]
description = "Jina VDR: a multilingual, multi-domain benchmark for visual document retrieval."
authors = [
    { name = "Manuel Faysse", email = "manuel.faysse@illuin.tech" },
    { name = "Hugues Sibille", email = "hugues.sibille@illuin.tech" },
    { name = "Tony Wu", email = "tony.wu@illuin.tech" },
    { name = "Bo Wang", email = "bo.wang@jina.ai" },
    { name = "Michael Guenther", email = "michael.guenther@jina.ai" },
    { name = "Isabelle Mohr"},
    { name = "Mohammad Kalim Akram", email = "kalim.akram@jina.ai" },
    { name = "Saba Sturua", email = "saba.sturua@jina.ai" },
    { name = "Andrei Ungureanu", email = "andrei.ungureanu@jina.ai" },
]
maintainers = [
    { name = "Bo Wang", email = "bo.wang@jina.ai" },
    { name = "Michael Guenther", email = "michael.guenther@jina.ai" },
    { name = "Isabelle Mohr"},
    { name = "Mohammad Kalim Akram", email = "kalim.akram@jina.ai" },
    { name = "Saba Sturua", email = "saba.sturua@jina.ai" },
    { name = "Andrei Ungureanu", email = "andrei.ungureanu@jina.ai" },
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "datasets>=2.15.0",
    "GPUtil>=1.4.0,<2.0.0",
    "mteb>=1.16.3,<1.17.0",
    "pydantic>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "sentence-transformers>=3.0.1,<4.0.0",
    "sentencepiece>=0.2.0,<1.0.0",
    "tenacity>=8.0.0",
    "transformers>=4.46.1",
    "typer>=0.12.3,<1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.1", "ruff>=0.4.5"]

bge-m3 = ["FlagEmbedding>=1.2.10,<2.0.0"]
bm25 = ["nltk>=3.8.1,<4.0.0", "rank-bm25>=0.2.2,<1.0.0"]
cohere = ["cohere>=5.11.2,<6.0.0"]
colpali-engine = ["colpali-engine>=0.3.10,<0.4.0"]
dse = ["qwen-vl-utils==0.0.8", "transformers<4.50.0", "torchvision>=0.22.1"]
jina-clip = ["timm>=1.0.7,<2.0.0", "transformers<4.52.0", "einops==0.8.1"]
jina-v3 = ["einops==0.8.1"]
jina-v4 = ["peft==0.15.2", "transformers>=4.52.0", "torchvision>=0.22.1"]
siglip = ["protobuf>=4.25.3"]
all-retrievers = [
    "vidore-benchmark[bge-m3]",
    "vidore-benchmark[bm25]",
    "vidore-benchmark[cohere]",
    "vidore-benchmark[colpali-engine]",
    "vidore-benchmark[dse]",
    "vidore-benchmark[jina-clip]",
    "vidore-benchmark[jina-v3]",
    "vidore-benchmark[jina-v4]",
    "vidore-benchmark[siglip]",
]

token-pooling = ["vidore-benchmark[colpali-engine]"]

all = [
    "vidore-benchmark[all-retrievers]",
    "vidore-benchmark[token-pooling]",
    "vidore-benchmark[dev]",
]

skypilot = ["skypilot==0.6.1,<1.0.0"]

[project.urls]
homepage = "https://github.com/illuin-tech/vidore-benchmark"

[project.scripts]
vidore-benchmark = "vidore_benchmark.cli.main:app"

[tool.pytest.ini_options]
filterwarnings = ["ignore::Warning"]
markers = ["slow: marks test as slow"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
